[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/ExplodingBolt.gd" type="Script" id=1]
[ext_resource path="res://resources/graphics/bolt.png" type="Texture" id=2]
[ext_resource path="res://resources/graphics/explosions/explosion_smoke_sprite.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.249071, 0.29368, 0.587361, 0.992565, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0.254159, 0.494118, 0.494118, 0.494118, 0 )

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0.187755, 0.2, 0.371429, 0.42449, 0.783673, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.921783, 0.0898438, 1, 1, 0.5625, 0, 1, 0.270271, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 17 )

[sub_resource type="Curve" id=18]
_data = [ Vector2( 0, 0.463636 ), 0.0, 0.0, 0, 0, Vector2( 0.384956, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=110]
lifetime_randomness = 0.9
flag_align_y = true
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.46
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.83
damping_random = 0.61
scale_random = 1.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[node name="ExplodingBolt" type="Polygon2D"]
rotation = 1.5708
offset = Vector2( 0.5, 0 )
texture = ExtResource( 2 )
texture_offset = Vector2( 4.5, 5 )
polygon = PoolVector2Array( 4, -1.00001, 0.999986, -4, -2.00001, -4, -5, -0.999986, -4.99999, 3.00002, 4.00001, 2.99999 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DebrisParticles" type="CPUParticles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 20
lifetime = 0.7
one_shot = true
explosiveness = 0.63
randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 7, 7 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 67.13
initial_velocity_random = 0.53
damping = 44.79
scale_amount = 1.3
color_ramp = SubResource( 1 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 24
one_shot = true
explosiveness = 0.85
randomness = 1.0
draw_order = 1
process_material = SubResource( 110 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
